@@ -1,8 +1,8 @@
 Package: Rfacebook
 Title: Access to Facebook API via R
 Description: Provides an interface to the Facebook API
-Version: 0.2.2
-Date: 2013/11/15
+Version: 0.2.3
+Date: 2013/11/21
 Author: Pablo Barbera <pablo.barbera@nyu.edu>
 Maintainer: Pablo Barbera <pablo.barbera@nyu.edu>
 Depends:
@@ -22,3 +22,4 @@ Collate:
     'getPage.R'
     'getPost.R'
     'getCheckins.R'
+    'getLikes.R'
